SiteAdminConfigurationPage: actually fix wrapping

--- a/web/src/site-admin/SiteAdminConfigurationPage.scss
+++ b/web/src/site-admin/SiteAdminConfigurationPage.scss
@@ -5,6 +5,9 @@
 
     &__alert {
         margin: 0.5rem 0 1rem;
+        code {
+            white-space: pre-wrap;
+        }
         p:last-child,
         ul:last-child {
             margin-bottom: 0;
